--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
+    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.22"
   },
   "scripts": {
